--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "hexo": "^5.4.0",
     "hexo-algolia": "^1.3.2",
     "hexo-asset-image-for-hexo5": "^2.1.7",
+    "hexo-blog-encrypt": "^3.1.6",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
