--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,12 @@ algolia:
   indexName: 'blog'
   chunkSize: 5000
 
+search:
+  path: search.xml
+  field: all
+  content: true
+  format: html
+
 # counting
 symbols_count_time:
   symbols: true
