--- a/_config.yml
+++ b/_config.yml
@@ -103,13 +103,19 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: 'git'
-  repo:
-    github: git@github.com:codingspirit/codingspirit.github.io.git
-    tencentcloud: git@e.coding.net:codingspirit/lzqblog.top/lzqblog.top.git
-    coding: git@e.coding.net:Coding_Spirit/Coding_Spirit.git
-    # gitee: git@gitee.com:lzqgyq/lzqblog.git
-  branch: master
+  - type: git
+    repo:
+      github: git@github.com:codingspirit/codingspirit.github.io.git
+      # tencentcloud: git@e.coding.net:codingspirit/lzqblog.top/lzqblog.top.git
+      # coding: git@e.coding.net:Coding_Spirit/Coding_Spirit.git
+      # gitee: git@gitee.com:lzqgyq/lzqblog.git
+    branch: master
+
+  - type: cos
+    secretId: AKIDwiKkxynQr690f8PUN4Zsztb7RaZNzPeh
+    secretKey: tZ4MSREpERRFrHVXN1SikaEgw0ta6Thk
+    bucket: lzqblog-1301184997
+    region: ap-hongkong
 
 # export HEXO_ALGOLIA_INDEXING_KEY=81c90fc42aaa863e47b1049dd1b739ce; hexo algolia
 algolia:
