--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Coding Spirit
 subtitle: '一位程序员，比较帅的那种'
-description: '毕业于OUC，现就职于Amazon'
+description: '毕业于OUC,现就职于Amazon'
 keywords:
 author: Coding Spirit
 language: en
