--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "6.1.0"
+    "version": "6.2.0"
   },
   "dependencies": {
-    "hexo": "^6.0.0",
-    "hexo-asset-image-for-hexo5": "^2.1.7",
-    "hexo-blog-encrypt": "^3.1.6",
-    "hexo-deployer-cos": "^1.2.1",
+    "hexo": "^6.2.0",
+    "hexo-asset-image-for-hexo5": "github:codingspirit/hexo-asset-image-for-hexo5",
+    "hexo-deployer-cos": "github:codingspirit/hexo-deployer-cos",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-searchdb": "^1.4.0",
-    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^5.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-symbols-count-time": "^0.7.1"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-word-counter": "^0.0.3"
   }
 }
