--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.2.0"
   },
   "dependencies": {
+    "@next-theme/plugins": "^8.12.1",
     "hexo": "^6.2.0",
     "hexo-asset-image-for-hexo5": "github:codingspirit/hexo-asset-image-for-hexo5",
     "hexo-deployer-cos": "github:codingspirit/hexo-deployer-cos",
