--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "version": "6.2.0"
   },
   "dependencies": {
-    "@next-theme/plugins": "^8.12.1",
     "hexo": "^6.2.0",
     "hexo-asset-image-for-hexo5": "github:codingspirit/hexo-asset-image-for-hexo5",
+    "hexo-blog-encrypt": "^3.1.6",
     "hexo-deployer-cos": "github:codingspirit/hexo-deployer-cos",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
@@ -26,7 +26,6 @@
     "hexo-renderer-marked": "^5.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3",
     "hexo-word-counter": "^0.0.3"
   }
 }
